--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <input type="number" id="valor" /><br>
     <button type="submit" id="valor-chutar" onclick="Chutar()">Chutar</button>
     <h2 class="resultado" id="resultado"></h2>
+    <h2 class="dica" id="dica"></h2>
   </div>
 
   <script src="script.js"></script>
